--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "firebase": "^9.22.2",
+    "framer-motion": "^10.12.16",
     "jsonwebtoken": "^9.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
